# symsync

./: Cargo.toml  README.md  default_config.toml
src/: lib.rs  main.rs
testing/: makefile  mkfolders.sh
testing/pc1/local/.sync/: image.toml
testing/pc2/local/.sync/: config.toml
testing/pc2/remote/: 14d07959170adae1  image
