[package]
name = "symsync"
version = "0.2.0"
authors = ["Georg Harder <harder.georg@gmail.com>"]
edition = "2018"

[dependencies]

openssl = "0.10"
sha3 = "0.8.2"
rand = "0.7.3"
rand_distr = "0.2.2"
siphasher = "0.3.3"

toml = "0.5.5"
serde = { version = "1.0.125", features = ["derive"]}
serde_json = "1.0"

